# superstore-sales-CS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: business_questions.md
notebooks/: 00_data_review.ipynb  02_eda_sales.ipynb
scripts/: run_cleaning.py
src/superstore/: constants.py
src/superstore/analytics/: kpis.py  sales.py
src/superstore/data/: cleaner.py  loader.py  validator.py
src/superstore/features/: build_features.py
src/superstore/utils/: paths.py  progress.py
