[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superstore-sales-analytics"
version = "0.1.0"
description = "Global Superstore Sales and Profitability Analytics project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Arturo Yared Elizondo Regino" }
]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "plotly",
    "streamlit",
    "pyyaml",
    "python-dotenv",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
    "ruff",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
